crates/parser/src/tests/snapshots/kcl_parser__tests__expr__number_bin_suffix_expr.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"1234Ki\"####)"
---
Node {
    node: NumberLit(
        NumberLit {
            binary_suffix: Some(
                Ki,
            ),
            value: Int(
                1234,
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
