crates/parser/src/tests/snapshots/kcl_parser__tests__expr__parse_joined_string_0.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"'${123+200}'\"####)"
---
Node {
    node: JoinedString(
        JoinedString {
            is_long_string: false,
            values: [
                Node {
                    node: FormattedValue(
                        FormattedValue {
                            is_long_string: false,
                            value: Node {
                                node: Binary(
                                    BinaryExpr {
                                        left: Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        123,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 3,
                                            end_line: 1,
                                            end_column: 6,
                                        },
                                        op: Add,
                                        right: Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        200,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 7,
                                            end_line: 1,
                                            end_column: 10,
                                        },
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 3,
                                end_line: 1,
                                end_column: 10,
                            },
                            format_spec: None,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 3,
                    end_line: 1,
                    end_column: 10,
                },
            ],
            raw_value: "'${123+200}'",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 12,
}
