crates/parser/src/tests/snapshots/kcl_parser__tests__expr__primary_expr_5.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"{}...a\"####)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}
